# ChangeLog for net-nntp/kwooty
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-nntp/kwooty/ChangeLog,v 1.21 2012/06/18 15:20:54 ago Exp $

  18 Jun 2012; Agostino Sarubbo <ago@gentoo.org> kwooty-0.8.3.ebuild:
  Stable for amd64, wrt bug #421449

  17 Jun 2012; Jeff Horelick <jdhore@gentoo.org> kwooty-0.8.3.ebuild:
  marked x86 per bug 421449

*kwooty-0.8.3 (01 Apr 2012)

  01 Apr 2012; Johannes Huber <johu@gentoo.org> +kwooty-0.8.3.ebuild,
  -kwooty-0.8.1.ebuild:
  Version bump, remove old.

*kwooty-0.8.2 (28 Feb 2012)

  28 Feb 2012; Johannes Huber <johu@gentoo.org> +kwooty-0.8.2.ebuild,
  -kwooty-0.7.2.ebuild, -kwooty-0.7.3.ebuild, -kwooty-0.8.0.ebuild:
  Version bump wrt bug #406161. Remove old.

*kwooty-0.8.1 (02 Feb 2012)

  02 Feb 2012; Johannes Huber <johu@gentoo.org> +kwooty-0.8.1.ebuild:
  Version bump.

*kwooty-0.8.0 (11 Jan 2012)

  11 Jan 2012; Johannes Huber <johu@gentoo.org> +kwooty-0.8.0.ebuild:
  Version bump.

*kwooty-0.7.3 (18 Dec 2011)

  18 Dec 2011; Johannes Huber <johu@gentoo.org> +kwooty-0.7.3.ebuild,
  -kwooty-0.7.0.ebuild:
  Version bump wrt bug #395127.

*kwooty-0.7.2 (25 Sep 2011)

  25 Sep 2011; Andreas K. Huettel <dilfridge@gentoo.org> +kwooty-0.7.2.ebuild:
  Version bump

*kwooty-0.7.0 (20 Apr 2011)

  20 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org> +kwooty-0.7.0.ebuild:
  Version bump.

  30 Jan 2011; Tomáš Chvátal <scarabeus@gentoo.org> -kwooty-0.4.0.ebuild,
  -kwooty-0.5.1.ebuild, kwooty-0.6.2.ebuild:
  Stabilise latest on x86 and amd64. Drop older.

*kwooty-0.6.2 (02 Jan 2011)

  02 Jan 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +kwooty-0.6.2.ebuild:
  Version bump

*kwooty-0.5.1 (02 Aug 2010)

  02 Aug 2010; Samuli Suominen <ssuominen@gentoo.org> +kwooty-0.5.1.ebuild:
  Version bump wrt #329227 by Martux.

  16 Jul 2010; Christian Faulhammer <fauli@gentoo.org> kwooty-0.4.0.ebuild:
  stable x86, bug 325987
