@@ -1,6 +1,10 @@
 # ChangeLog for net-nntp/kwooty
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nntp/kwooty/ChangeLog,v 1.21 2012/06/18 15:20:54 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nntp/kwooty/ChangeLog,v 1.22 2012/06/18 15:23:42 ago Exp $
+
+  18 Jun 2012; Agostino Sarubbo <ago@gentoo.org> -kwooty-0.6.2.ebuild,
+  -kwooty-0.8.2.ebuild:
+  Remove old
 
   18 Jun 2012; Agostino Sarubbo <ago@gentoo.org> kwooty-0.8.3.ebuild:
   Stable for amd64, wrt bug #421449
